# rcrl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  precompiled_header.cmake
src/: host_app.cpp  host_app.h  main.cpp  precompiled_for_plugin.cpp  precompiled_for_plugin.h  rcrl.cpp  rcrl.h  rcrl_for_plugin.h  visibility.h
src/rcrl/: rcrl.cpp  rcrl.h  rcrl_for_plugin.h  rcrl_parser.cpp  rcrl_parser.h
tests/: CMakeLists.txt  compiler_tests.cpp  parser_tests.cpp  tests.cpp
